--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "firebase": "^9.6.7",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-card-flip": "^1.1.5",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
